<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/salad"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_person_id"
            android:hint="@string/email"
            android:id="@+id/login_email"
            />

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password"
            android:id="@+id/login_password"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_log"
            android:id="@+id/login_log_btn"
            />

        <TextView
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reg"
            android:id="@+id/login_reg_btn"
            android:clickable="true"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>