<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Register"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_id"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/email"
            android:id="@+id/reg_email"
            />

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/password"
            android:id="@+id/reg_password"
            />

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="@string/re_password"
            android:id="@+id/reg_re_password"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_reg"
            android:id="@+id/reg_reg_btn"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>